# gccAutotools

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac  hello.c  whine.c  whine.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
