AC_INIT([hello world],[0.01], [x@example.com], [hii], [https://surajkulriya.github.io/])
AC_PREREQ([2.68]) 				#autoconf version>=2.68
AC_CONFIG_SRCDIR([hello.c])			#safety file must exist
AC_CONFIG_HEADERS([config.h])			#Make config header
AC_CONFIG_AUX_DIR([build-aux])		#Auxiliary files go here
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.11 -Wall -Werror])	#init Automake
AC_CONFIG_FILES([Makefile])			#configure creates makefile
AC_PROG_CC					#find and probe c compiler
AC_OUTPUT 
